# mysql-server

./: .clang-tidy  CMakeLists.txt  Doxyfile-ignored  Doxyfile.in  LICENSE  MYSQL_VERSION  VERSION  config.h.cmake  configure.cmake
Docs/: README.build  sp-imp-spec.txt
client/: CMakeLists.txt  client_priv.h  client_query_attributes.cc  client_query_attributes.h  completion_hash.cc  completion_hash.h  echo.cc  infix_ostream_it.h  json_binlog.ver  json_binlog_main.cc  json_client_library_main.cc  logger.cc  logger.h  multi_factor_passwordopt-vars.cc  multi_option.cc  multi_option.h  my_readline.h  mysql.cc  mysql_config_editor.cc  mysql_secure_installation.cc  mysql_ssl_rsa_setup.cc  mysqladmin.cc  mysqlbinlog.cc  mysqlbinlog.h  mysqldump.cc  mysqlimport.cc  mysqlshow.cc  mysqlslap.cc  mysqltest.cc  path.cc  path.h  pattern_matcher.cc  pattern_matcher.h  readline.cc
cmake/: abi_check.cmake  add_custom_target.cmake  bison.cmake  boost.cmake  character_sets.cmake  cmake_parse_arguments.cmake  cmake_policies.cmake  compile_flags.cmake  component.cmake  copy_custom_dylib.cmake  copy_custom_library.cmake  copy_openssl_binary.cmake  cpack_source_ignore_files.cmake  cpu_info.cmake  curl.cmake  do_abi_check.cmake  fastcov.cmake  fido2.cmake  filesize.bat  fileutils.cmake  floating_point.cmake  fprofile.cmake  gloves.cmake  googletest.cmake  icu.cmake  info_bin.cmake  info_macros.cmake.in  info_src.cmake  install_layout.cmake  install_macros.cmake  install_name_tool.cmake  java.cmake  java_home.cmake  kerberos.cmake  ldap.cmake  libbacktrace.cmake  libcno.cmake  libevent.cmake  libs_mysql_create_library.cmake  libutils.cmake  (+34 more)
doxygen_resources/: doxygen-filter-mysqld  doxygen-filter-proto  mysql.css
extra/opentelemetry-cpp/: CMakeLists.txt  README.txt
extra/opentelemetry-cpp/opentelemetry-cpp-1.23.0/: CMakeLists.txt
extra/opentelemetry-cpp/opentelemetry-cpp-1.23.0/api/include/opentelemetry/metrics/: meter.h
extra/opentelemetry-cpp/opentelemetry-cpp-1.23.0/cmake/: opentelemetry-proto.cmake  patch-imported-config.cmake
extra/opentelemetry-cpp/opentelemetry-cpp-1.23.0/exporters/otlp/: CMakeLists.txt
extra/opentelemetry-cpp/opentelemetry-cpp-1.23.0/exporters/otlp/include/opentelemetry/exporters/otlp/: otlp_http_client.h  otlp_http_log_record_exporter.h
include/: mem_root_deque.h  my_sqlcommand.h  my_sys.h  my_temporal.h  my_time.h  pfs_telemetry_logs_client_provider.h  pfs_telemetry_logs_provider.h  tls_ciphers.h
libbinlogevents/: CMakeLists.txt  binlog_config.h.cmake
libbinlogstandalone/: CMakeLists.txt
libchangestreams/: CMakeLists.txt
libmysql/: CMakeLists.txt  dns_srv.cc  dns_srv_data.h  errmsg.cc  libmysql.cc  mysql_trace.cc  mysql_trace.h  test_trace_plugin.cc
libservices/: thd_alloc_service.c
man/: CMakeLists.txt  comp_err.1  ibd2sdi.1  innochecksum.1  my_print_defaults.1  myisam_ftdump.1  myisamchk.1  myisamlog.1  myisampack.1  mysql.1  mysql.server.1  mysql_config.1  mysql_config_editor.1  mysql_migrate_keyring.1  mysql_secure_installation.1  mysql_tzinfo_to_sql.1  mysqladmin.1  mysqlbinlog.1  mysqlcheck.1  mysqld.8  mysqld_multi.1  mysqld_safe.1  mysqldump.1  mysqldumpslow.1  mysqlimport.1  mysqlrouter.1  mysqlrouter_keyring.1  mysqlrouter_passwd.1  mysqlrouter_plugin_info.1  mysqlshow.1  mysqlslap.1  ndb_blob_tool.1  ndb_config.1  ndb_delete_all.1  ndb_desc.1  ndb_drop_index.1  ndb_drop_table.1  ndb_error_reporter.1  ndb_import.1  ndb_index_stat.1  (+24 more)
mysql-test/: CMakeLists.txt  asan.supp  lsan.supp  mysql-stress-test.pl  mysql-test-run.pl  valgrind.supp
mysys/: CMakeLists.txt  array.cc  build_id.cc  build_id_test.cc  charset-def.cc  charset.cc  crypt_genhash_impl.cc  decimal.cc  errors.cc  keyring_operations_helper.cc  kqueue_timers.cc  lf_alloc-pin.cc  lf_dynarray.cc  lf_hash.cc  mf_arr_appstr.cc  mf_cache.cc  mf_dirname.cc  mf_fn_ext.cc  mf_format.cc  mf_iocache.cc  mf_iocache2.cc  mf_keycache.cc  mf_keycaches.cc  mf_loadpath.cc  mf_pack.cc  mf_path.cc  mf_same.cc  mf_tempdir.cc  mf_tempfile.cc  mf_unixpath.cc  mulalloc.cc  my_access.cc  my_aes.cc  my_aes_openssl.cc  my_aligned_malloc.cc  my_alloc.cc  my_bit.cc  my_bitmap.cc  my_chmod.cc  my_chsize.cc  (+71 more)
plugin/telemetry_client/: CMakeLists.txt  tm_client_options.cc  tm_client_options.h  tm_client_plugin.cc
router/: CMakeLists.txt  LICENSE.router  config.h.in  tsan.supp
scripts/: CMakeLists.txt  comp_sql.cc  fill_help_tables.sql  firewall_stored_procedures.sql  mysql_system_tables.sql  mysql_system_tables_fix.sql  mysql_test_data_timezone.sql
share/: errmsg_readme.txt  messages_to_clients.txt  messages_to_error_log.txt
sql/: .clang-tidy  CMakeLists.txt  aggregate_check.cc  aggregated_stats_buffer.cc  auto_thd.cc  basic_istream.cc  binlog.cc  binlog_istream.cc  binlog_reader.cc  bootstrap.cc  check_stack.cc  clone_handler.cc  command_mapping.cc  command_service.cc  create_def.cc  create_field.cc  create_field.h  dd_sp.cc  dd_sql_view.cc  dd_table_share.cc  debug_lock_order.cc  debug_sync.cc  default_values.cc  derror.cc  dynamic_ids.cc  error_handler.cc  event_data_objects.cc  event_db_repository.cc  event_parse_data.cc  event_queue.cc  event_scheduler.cc  events.cc  field.cc  field.h  field_conv.cc  filesort.cc  filesort_utils.cc  gen_keyword_list.cc  gen_lex_hash.cc  gen_lex_token.cc  (+294 more)
sql-common/: bind_params.cc  client.cc  client_async_authentication.h  client_authentication.cc  client_extensions_macros.h  client_plugin.cc  compression.cc  get_password.cc  json_binary.cc  json_binary.h  json_dom.cc  json_dom.h  json_error_handler.cc  json_error_handler.h  json_path.cc  json_path.h  json_schema.cc  json_syntax_check.cc  json_syntax_check.h  my_decimal.cc  my_decimal.h  my_path_permissions.cc  mysql_native_authentication_client.cc  mysql_native_authentication_client.h  net_ns.cc  net_serv.cc  sql_string.cc
strings/: CHARSET_INFO.txt  CMakeLists.txt  collations.cc  collations_internal.cc  collations_internal.h  conf_to_src.cc  ctype-big5.cc  ctype-bin.cc  ctype-cp932.cc  ctype-czech.cc  ctype-euc_kr.cc  ctype-eucjpms.cc  ctype-extra.cc  ctype-gb18030.cc  ctype-gb2312.cc  ctype-gbk.cc  ctype-mb.cc  (+35 more)
(+6969 files in other folders)
